[metadata]
name = ghubunix
version = 1.0.1
description = Browse GitHub like it is Unix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BBloggsbott/ghub
author = Vishal R
author_email = vishal27.rs@outlook.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    aspy.yaml==1.3.0
    atomicwrites==1.3.0
    attrs==19.3.0
    certifi==2019.9.11
    cfgv==2.0.1
    chardet==3.0.4
    codecov==2.0.15
    coverage==4.5.4
    gitdb2==2.0.6
    GitPython==3.0.4
    identify==1.4.7
    idna==2.8
    importlib-metadata==0.23
    Mako==1.1.0
    Markdown==3.1.1
    MarkupSafe==1.1.1
    more-itertools==7.2.0
    nodeenv==1.3.3
    oauthlib==3.1.0
    packaging==19.2
    pathlib==1.0.1
    pdoc3==0.7.1
    pluggy==0.13.0
    py==1.8.0
    pyparsing==2.4.2
    pytest==5.2.2
    pytest-cov==2.8.1
    PyYAML==5.1.2
    requests==2.22.0
    requests-oauthlib==1.2.0
    Send2Trash==1.5.0
    six==1.12.0
    smmap2==2.0.5
    termcolor==1.1.0
    toml==0.10.0
    urllib3==1.25.6
    virtualenv==16.7.7
    wcwidth==0.1.7
    zipp==0.6.0
python_requires = >=3.7.*

[options.entry_points]
console_scripts =
    ghub = ghub.runner:run_ghub

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
